Hospital mortality analysis: video header, regional maps, and visualizations

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     <!-- Hero Section with Video -->
     <div class="hero">
         <video autoplay muted loop playsinline>
-            <source src="12279644_3840_2160_60fps.mp4" type="video/mp4">
+            <source src="3370925-uhd_3840_2160_30fps.mp4" type="video/mp4">
         </video>
         <div class="hero-content">
             <h1>The South is Suffering</h1>
