Replace statistics with top counties chart and narrative analysis in overview section

--- a/index.html
+++ b/index.html
@@ -351,31 +351,8 @@
                 the national average.
             </p>
 
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <div class="stat-number">4,791</div>
-                    <div class="stat-label">Hospitals Analyzed</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-number">3,752</div>
-                    <div class="stat-label">ZIP Codes Covered</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-number">7.8%</div>
-                    <div class="stat-label">Peak Mortality Rate</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-number">4.2%</div>
-                    <div class="stat-label">National Average</div>
-                </div>
-            </div>
-
-            <div class="alert">
-                <p>
-                    <strong>Critical Finding:</strong> The highest hospital mortality rates in America are concentrated in the South.
-                    Mississippi, Louisiana, Alabama, Arkansas, and Tennessee consistently rank among the worst-performing states.
-                    Regional variation within these states reveals localized healthcare crises demanding targeted intervention.
-                </p>
+            <div class="map-container">
+                <iframe src="hospital_mortality_top_counties_chart.html"></iframe>
             </div>
         </section>
 
