Reorganize page: full narrative first, then map, then chart. Update chart title to 'The US Counties with the Highest Mortality Rates'

--- a/index.html
+++ b/index.html
@@ -341,19 +341,32 @@
         <section id="overview">
             <h2>Overview</h2>
             <p>
-                A comprehensive analysis of hospital-wide mortality rates reveals a deeply concerning pattern:
-                America's Bible Belt faces a healthcare crisis that demands immediate national attention.
+                Hospital mortality is often discussed as a reflection of medical care. It is defined by the expertise of physicians, the quality of facilities, or the severity of a patient's illness. But when mortality rates are mapped, clear regional patterns emerge. The highest-mortality communities are not randomly distributed across the country, they are concentrated in one part of it.
             </p>
             <p>
-                This investigation examines the Hybrid Hospital-Wide All-Cause Risk Standardized Mortality Rate across
-                4,791 hospitals in the United States. The data paints a stark picture of geographic healthcare inequality,
-                with the South—particularly the Bible Belt region—experiencing mortality rates significantly elevated above
-                the national average.
+                Of the ten ZIP codes in the United States with the highest mortality rates, four are in Mississippi. All ten are in the South.
             </p>
-
-            <div class="map-container">
-                <iframe src="hospital_mortality_top_counties_chart.html"></iframe>
-            </div>
+            <p>
+                Because this analysis relies on Medicare data collected by the Centers for Medicare and Medicaid Services, it reflects populations that already face elevated health risks. The map therefore does not capture every hospitalization in the country, nor does it represent mortality for much of the privately insured population. Instead, it demonstrates how patients within the Medicare system experience hospital outcomes across different communities.
+            </p>
+            <p>
+                The concentration of high-mortality ZIP codes in the South reflects the structural conditions that shape health long before someone is admitted to a hospital. Communities with higher poverty and under-resourced medical facilities often see patients arriving sicker and with more advanced disease. Rural hospital closures and staffing shortages can further strain the systems that remain. Transportation barriers may delay treatment. Preventive care may be inconsistent or unavailable. When these factors compound over time, the risk that a hospitalization becomes life-threatening increases.
+            </p>
+            <p>
+                Mississippi's prominence among the highest-mortality ZIP codes illustrates how state-level policy and regional infrastructure can influence outcomes. In The Commonwealth Fund's 2025 Scorecard on State Health System Performance, Mississippi ranked last. This ranking reflects gaps in healthcare funding, insurance coverage, public health investment, and the financial stability of hospitals. Those differences translate into measurable variations in patient survival.
+            </p>
+            <p>
+                Hospital mortality, then, becomes more than a measure of what happens inside a medical facility. It reflects the cumulative impact of economic conditions, healthcare access, and public policy across a person's lifetime. Geography acts as a proxy for opportunity — or the lack of it.
+            </p>
+            <p>
+                This analysis should not be interpreted as ranking individual hospitals or assigning blame to providers. Medicare patients are not evenly distributed across communities, and hospitals serving older, poorer, or sicker populations often face greater challenges. Instead, the goal is to highlight where risks concentrate.
+            </p>
+            <p>
+                If survival after hospitalization varies so dramatically by ZIP code, even within the same federal insurance program, the drivers are likely rooted in community conditions as much as clinical care.
+            </p>
+            <p>
+                Hospital mortality is often described as a medical outcome. But at a national scale, it is clear that it is also a geographic one.
+            </p>
         </section>
 
         <div class="divider"></div>
@@ -373,6 +386,19 @@
             </p>
             <div class="map-container">
                 <iframe src="hospital_mortality_state_regions_map.html"></iframe>
+            </div>
+        </section>
+
+        <div class="divider"></div>
+
+        <!-- Top Counties Chart Section -->
+        <section id="counties">
+            <h2>The US Counties with the Highest Mortality Rates</h2>
+            <p class="section-intro">
+                All 15 are in the South and Puerto Rico
+            </p>
+            <div class="map-container">
+                <iframe src="hospital_mortality_top_counties_chart.html"></iframe>
             </div>
         </section>
 
