Move first two paragraphs above mortality map as intro section

--- a/index.html
+++ b/index.html
@@ -337,6 +337,18 @@
 
     <!-- Main Content -->
     <div class="container">
+        <!-- Intro Paragraphs -->
+        <section>
+            <p>
+                Hospital mortality is often discussed as a reflection of medical care. It is defined by the expertise of physicians, the quality of facilities, or the severity of a patient's illness. But when mortality rates are mapped, clear regional patterns emerge. The highest-mortality communities are not randomly distributed across the country, they are concentrated in one part of it.
+            </p>
+            <p>
+                Of the ten ZIP codes in the United States with the highest mortality rates, four are in Mississippi. All ten are in the South.
+            </p>
+        </section>
+
+        <div class="divider"></div>
+
         <!-- Map Section -->
         <section id="map">
             <h2>Public Hospitals in the US Mapped by Mortality Rate</h2>
@@ -359,12 +371,6 @@
 
         <!-- Overview Section -->
         <section id="overview">
-            <p>
-                Hospital mortality is often discussed as a reflection of medical care. It is defined by the expertise of physicians, the quality of facilities, or the severity of a patient's illness. But when mortality rates are mapped, clear regional patterns emerge. The highest-mortality communities are not randomly distributed across the country, they are concentrated in one part of it.
-            </p>
-            <p>
-                Of the ten ZIP codes in the United States with the highest mortality rates, four are in Mississippi. All ten are in the South.
-            </p>
             <p>
                 Because this analysis relies on Medicare data collected by the Centers for Medicare and Medicaid Services, it reflects populations that already face elevated health risks. The map therefore does not capture every hospitalization in the country, nor does it represent mortality for much of the privately insured population. Instead, it demonstrates how patients within the Medicare system experience hospital outcomes across different communities.
             </p>
