Style intro paragraphs with highlighted background and larger font to make them stand out

--- a/index.html
+++ b/index.html
@@ -204,6 +204,28 @@
             font-weight: 500;
         }
 
+        /* Intro Section */
+        .intro-section {
+            background: linear-gradient(135deg, #FFF3E0 0%, #FFE5CC 100%);
+            border-left: 5px solid #FF6B35;
+            padding: 40px;
+            margin: 30px 0;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .intro-section p {
+            font-size: 1.15em;
+            line-height: 1.9;
+            color: #003366;
+            font-weight: 500;
+            margin-bottom: 20px;
+        }
+
+        .intro-section p:last-child {
+            margin-bottom: 0;
+        }
+
         /* Map Container */
         .map-container {
             width: 100%;
@@ -338,7 +360,7 @@
     <!-- Main Content -->
     <div class="container">
         <!-- Intro Paragraphs -->
-        <section>
+        <section class="intro-section">
             <p>
                 Hospital mortality is often discussed as a reflection of medical care. It is defined by the expertise of physicians, the quality of facilities, or the severity of a patient's illness. But when mortality rates are mapped, clear regional patterns emerge. The highest-mortality communities are not randomly distributed across the country, they are concentrated in one part of it.
             </p>
