--- a/index.html
+++ b/index.html
@@ -206,20 +206,24 @@
 
         /* Intro Section */
         .intro-section {
-            background: linear-gradient(135deg, #FFF3E0 0%, #FFE5CC 100%);
-            border-left: 5px solid #FF6B35;
+            background: #f8f9fa;
+            border-left: 5px solid #003366;
             padding: 40px;
             margin: 30px 0;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            border-radius: 0;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+            text-align: center;
         }
 
         .intro-section p {
-            font-size: 1.15em;
-            line-height: 1.9;
-            color: #003366;
+            font-size: 1.1em;
+            line-height: 1.8;
+            color: #333;
             font-weight: 500;
             margin-bottom: 20px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .intro-section p:last-child {
